refactor: elimina GameLoader per evitare over-engineering